Moved UnitTest_TransferCalc.cpp to Source folder

--- a/TransferCalcWin/UnitTest_TransferCalc/UnitTest_TransferCalc.vcxproj.filters
+++ b/TransferCalcWin/UnitTest_TransferCalc/UnitTest_TransferCalc.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UnitTest_TransferCalc.cpp">
+    <ClCompile Include="..\..\Source\UnitTest_TransferCalc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
