Updated makefile, now it builds the target program and the unit tester

--- a/TransferCalcLinux/makefile
+++ b/TransferCalcLinux/makefile
@@ -3,11 +3,11 @@ VPATH = ../Source ../../googletest/googletest/src
 GOOGLETSTOBJS = gtest_main.o gtest-all.o
 
 all : TransferCalc.exe UnitTest_TransferCalc.exe
-	chmod a+x TransferCalc.exe
-	chmod a+x unitTest_TransferCalc.exe
+	chmod a+x ./TransferCalc.exe
+	chmod a+x ./UnitTest_TransferCalc.exe
 
 %.o : %.cpp
-	g++ -c  $^
+	g++ -c  $^ -I../../googletest/googletest/include -I../../googletest/googletest
 	
 %.o : %.cc
 	g++ -c -pthread $^ -I../../googletest/googletest/include -I../../googletest/googletest
@@ -15,7 +15,7 @@ all : TransferCalc.exe UnitTest_TransferCalc.exe
 TransferCalc.exe : TransferCalc.o TCLog.o DimParam.o
 	g++ -o $@ $^
 	
-UnitTest_TransferCalc.exe : gtest_main.o gtest-all.o TCLog.o DimParam.o unitTest_TransferCalc.o
+UnitTest_TransferCalc.exe : gtest_main.o gtest-all.o TCLog.o DimParam.o UnitTest_TransferCalc.o
 	g++ -pthread -o $@ $^
 	
 clean:
